# AndroidDemo

./: .gitignore  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/androidTest/java/hxb/xb_testandroidfunction/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/jkda/: HB1.html  HB2.html  HB3.html  HB4.html  HB5.html  app.js
app/src/main/assets/jkda/css/: HB1.css  HB2.css  HB3.css  HB5.css
app/src/main/assets/jkda/css/com/: app.css  common.css  fontSize.css  input.css  modelShow.css  modelShowMove.css  reset.css  (+1 more)
app/src/main/assets/jkda/js/: HB1.js  HB2.js  HB3.js  HB4.js  HB5.js  com.js
app/src/main/assets/statistics/: healthscheme.html  newPatients.html  warning.html  workplan.html
app/src/main/assets/statistics/js/: ap_newPatients.js  app.js  app_healthscheme.js  app_warning.js  app_workplan.js  progress.js
app/src/main/assets/test_analytical/xml/: test1_blockly.xml  test2_blockly.xml  test3_blockly.xml
app/src/main/jni/: Android.mk  Decode.cpp  hello-jni.c  hxb_xb_testandroidfunction_test_jni_HelloJni.h  reverse_words.cpp  reverse_words.h
app/src/main/res/anim/: anim_fragment_left_in.xml  anim_fragment_left_out.xml  anim_fragment_right_in.xml  anim_fragment_right_out.xml  anim_preview_pic_enter.xml  anim_preview_pic_exit.xml  slide_in_from_bottom.xml
app/src/main/res/color/: c_select_test1.xml
app/src/main/res/drawable/: d_focused_status.xml  d_select_presentation_flying_frame.xml  d_select_presentation_flying_frame2.xml  d_shape_divider_item_decoration_h.xml  d_shape_divider_item_decoration_v.xml  loading_anim.xml  preg_video_play_next_bt_selector.xml  prg_progress_horizontal.xml  scroll_bar_line.xml  scroll_bar_thumb.xml  selector_scroll_bar_line.xml  selector_scroll_bar_thumb.xml
app/src/main/res/drawable-xxhdpi/: bg_button.xml  d_select_button_bind_robelf_next_done.xml
app/src/main/res/layout/: activity_about_recyclerview.xml  activity_about_recyclerview2.xml  activity_avatar_revise.xml  activity_different_display.xml  activity_image_magnification.xml  activity_index_listview.xml  activity_main.xml  activity_main_chat.xml  activity_main_gif.xml  activity_test_apk_update.xml  activity_test_custom_listview.xml  activity_test_custom_view.xml  activity_test_kotlin.xml  activity_test_language_chanage.xml  activity_test_list.xml  activity_test_locate_function.xml  activity_test_notification.xml  activity_test_pic_review.xml  activity_test_play_video.xml  activity_test_scrollview1.xml  activity_test_scrollview2.xml  activity_test_snackbar.xml  activity_test_surface_view.xml  activity_test_surface_view_main.xml  activity_test_thread_pool.xml  activity_test_thread_pool2.xml  activity_test_thread_pool3.xml  activity_test_web.xml  item_presentation_video_app.xml  item_presentation_video_list.xml  item_row_section.xml  item_test_about_recyclerview1.xml  item_test_about_recyclerview2.xml  item_test_kotlin.xml  item_test_notification.xml  item_test_thread_pool.xml  pull_to_refresh_header_vertical2.xml  toast_xml.xml  view_bsnackbar_layout.xml  view_presentation_video.xml  (+2 more)
app/src/main/res/values/: arrays.xml  attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-bo-rCN/: strings.xml
app/src/main/res/values-en-rUS/: strings.xml
app/src/test/java/hxb/xb_testandroidfunction/: ExampleUnitTest.java
testjpeg/: CMakeLists.txt  build.gradle
testjpeg/src/main/: AndroidManifest.xml
testjpeg/src/main/jni/: native_lib.cpp
testjpeg/src/main/res/layout/: act_scheme.xml  activity_main.xml
testjpeg/src/main/res/values/: strings.xml
(+459 files in other folders)
